--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>[ Nguyễn Gia Phúc ] </title>
+        <title>Thông Tin Thanh Toán</title>
         <link href="https://i.imgur.com/kuAZrG5.jpg" rel="shortcut icon" type="image/x-icon" />
-        <meta content="Thông Tin Thanh Toán Của Nguyễn Gia Phúc  !" property="og:title" />
+        <meta content="Thông Tin Thanh Toán Của Lê Quang Hưng  !" property="og:title" />
         <meta content="https://cdn.trinhngocminh.com" property="og:url" />
         <meta content="https://i.imgur.com/kuAZrG5.jpg" property="og:image" />
         <meta content="website" property="og:type" />
